[tool.poetry]
name = "tilda_apache2nginx.py"
version = "0.1.0"
description = "Tool to convert htaccess files to nginx configs"
authors = ["Alex Tyshkevich <alex@tyshkevich.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
autoflake = "^1.4"
unify = "^0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
